--- a/Assignment-1/index-1.html
+++ b/Assignment-1/index-1.html
@@ -80,15 +80,15 @@
     </tr>
     <tr>
       <td>HTML tasks</td>
-      <td><a href="/Assignment-1/HTML-TASKS/index-2.html" target="_blank">Click Here</a></td>
+      <td><a href="HTML-TASKS/index-2.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>CSS tasks</td>
-      <td><a href="/Assignment-1/CSS-TASKS/index-3.html" target="_blank">Click Here</a></td>
+      <td><a href="CSS-TASKS/index-3.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>Bootstrap tasks</td>
-      <td><a href="/Assignment-1/BOOTSTRAP-TASKS/index-4.html" target="_blank">Click Here</a></td>
+      <td><a href="BOOTSTRAP-TASKS/index-4.html" target="_blank">Click Here</a></td>
     </tr>
   </table>
 </body>
