--- a/Assignment-1/CSS-TASKS/CSS-task-6.html
+++ b/Assignment-1/CSS-TASKS/CSS-task-6.html
@@ -100,7 +100,7 @@
 <body>
 
   <div class="container">
-    <img src="/Assignment-1/IMAGES/profile.jpg" alt="User Image">
+    <img src="../IMAGES/profile.jpg" alt="User Image">
 
     <div class="form-group">
       <label>Username</label>
