--- a/Assignment-1/BOOTSTRAP-TASKS/BS-task-2.html
+++ b/Assignment-1/BOOTSTRAP-TASKS/BS-task-2.html
@@ -53,7 +53,7 @@
 
   <!-- Hero Section -->
   <div class="text-center text-white d-flex align-items-center justify-content-center"
-    style="background: url('/Assignment-1/IMAGES/builder.jpg') no-repeat center/cover; height: 500px;">
+    style="background: url('../IMAGES/builder.jpg') no-repeat center/cover; height: 500px;">
     <div>
       <h5>We Are Professional</h5>
       <h1 class="fw-bold">For Your Dream Project</h1>
