--- a/Assignment-1/BOOTSTRAP-TASKS/BS-task-4.html
+++ b/Assignment-1/BOOTSTRAP-TASKS/BS-task-4.html
@@ -15,7 +15,7 @@
       <!-- Template 1 -->
       <div class="col-md-3">
         <div class="template text-center p-3 border border-dark shadow">
-          <img src="/Assignment-1/IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 1">
+          <img src="../IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 1">
           <h4>Cricket Set 1</h4>
           <p>This is very great and powerful set of Cricket.</p>
           <a href="#" class="btn btn-primary btn-sm">Learn More</a>
@@ -26,7 +26,7 @@
       <!-- Template 2 -->
       <div class="col-md-3">
         <div class="template text-center p-3 border border-dark shadow">
-          <img src="/Assignment-1/IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 2">
+          <img src="../IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 2">
           <h4>Cricket Set 2</h4>
           <p>This is very great and cheap set of Cricket.</p>
           <a href="#" class="btn btn-primary btn-sm">Learn More</a>
@@ -37,7 +37,7 @@
       <!-- Template 3 -->
       <div class="col-md-3">
         <div class="template text-center p-3 border border-dark shadow">
-          <img src="/Assignment-1/IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 3">
+          <img src="../IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 3">
           <h4>Cricket Set 3</h4>
           <p>This is very great and cheap set of Cricket.</p>
           <a href="#" class="btn btn-primary btn-sm">Learn More</a>
@@ -48,7 +48,7 @@
       <!-- Template 4 -->
       <div class="col-md-3">
         <div class="template text-center p-3 border border-dark shadow">
-          <img src="/Assignment-1/IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 4">
+          <img src="../IMAGES/bat-ball.jpg" class="img-fluid" alt="Image 4">
           <h4>Cricket Set 4</h4>
           <p>This is very great and cheap set of Cricket.</p>
           <a href="#" class="btn btn-primary btn-sm">Learn More</a>
