--- a/Assignment-1/HTML-TASKS/index-2.html
+++ b/Assignment-1/HTML-TASKS/index-2.html
@@ -65,13 +65,13 @@
 <body>
   <h1>MERN INTERNSHIP ASSIGNMENT - 1</h1>
   <h3>Name:</h3>
-  <p>Abhishek Gangwar</p>
+  <p>Mohit Aggarwal</p>
   
   <h3>Reg No.:</h3>
-  <p>22BCE10266</p>
+  <p>22BCE11488</p>
   
   <h3>VIT Email ID:</h3>
-  <p>abhishekgangwar2022@vitbhopal.ac.in</p>
+  <p>mohitaggarwal2022@vitbhopal.ac.in</p>
   
   <h2>All HTML Tasks</h2>
   <table>
