--- a/Assignment-1/JS-TASKS/js-task6.html
+++ b/Assignment-1/JS-TASKS/js-task6.html
@@ -137,7 +137,7 @@
 <body>
 
   <div class="container">
-    <img src="../IMAGES/insta.png" alt="Instagram Logo" class="logo">
+    <img src="../IMAGES/insta.jpg" alt="Instagram Logo" class="logo">
     <form id="loginForm">
       
       <!-- Username Field with Icon -->
