--- a/Assignment-1/JS-TASKS/index5.html
+++ b/Assignment-1/JS-TASKS/index5.html
@@ -37,15 +37,15 @@
 </head>
 
 <body>
-  <h1>MERN INTERSHIP ASSIGNMENT - 1</h1>
+  <h1>MERN INTERNSHIP ASSIGNMENT - 1</h1>
   <h3>Name:</h3>
-  <p>Abhishek Gangwar</p>
-  <br>
+  <p>Mohit Aggarwal</p>
+  
   <h3>Reg No.:</h3>
-  <p>22BCE10266</p>
-  <br>
+  <p>22BCE11488</p>
+  
   <h3>VIT Email ID:</h3>
-  <p>abhishekgangwar2022@vitbhopal.ac.in</p>
+  <p>mohitaggarwal2022@vitbhopal.ac.in</p>
   <br>
   <h2>All JS Tasks</h2>
   <table>
@@ -55,39 +55,39 @@
     </tr>
     <tr>
       <td>TASK - 1 :</td>
-      <td><a href="JS-task-1.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task1.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 2 :</td>
-      <td><a href="JS-task-2.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task2.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 3 :</td>
-      <td><a href="JS-task-3.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task3.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 4 :</td>
-      <td><a href="JS-task-4.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task4.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 5 :</td>
-      <td><a href="JS-task-5.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task5.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 6 :</td>
-      <td><a href="JS-task-6.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task6.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 7 :</td>
-      <td><a href="JS-task-7.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task7.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 8 :</td>
-      <td><a href="JS-task-8.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task8.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
       <td>TASK - 9 :</td>
-      <td><a href="JS-task-9-index.html" target="_blank">Click Here</a></td>
+      <td><a href="js-task9-index.html" target="_blank">Click Here</a></td>
     </tr>
   </table>
 
