--- a/Assignment-1/index-1.html
+++ b/Assignment-1/index-1.html
@@ -90,6 +90,10 @@
       <td>Bootstrap tasks</td>
       <td><a href="BOOTSTRAP-TASKS/index-4.html" target="_blank">Click Here</a></td>
     </tr>
+    <tr>
+      <td>JS tasks</td>
+      <td><a href="JS-TASKS/index5.html" target="_blank">Click Here</a></td>
+    </tr>
   </table>
 </body>
 
