--- a/Assignment-1/JS-TASKS/index5.html
+++ b/Assignment-1/JS-TASKS/index5.html
@@ -5,35 +5,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ethnus MERN Course Assignments</title>
-
   <style>
-    table {
-      width: 50%;
-      border-collapse: collapse;
-      margin: 20px 0;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      padding: 20px;
     }
 
-    th,
-    td {
-      border: 1px solid black;
-      padding: 10px;
+    h1 {
+      color: #333;
+    }
+
+    h3 {
+      margin-bottom: 5px;
+    }
+
+    p {
+      margin: 5px 0 15px;
+    }
+
+    table {
+      width: 60%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      background: #fff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    th, td {
+      padding: 12px;
+      border: 1px solid #ddd;
       text-align: left;
     }
 
     th {
-      background-color: #f2f2f2;
+      background-color: #bfab38;
+      color: white;
+    }
+
+    tr:hover {
+      background-color: #f1f1f1;
     }
 
     a {
       text-decoration: none;
-      color: blue;
+      color: #007bff;
+      font-weight: bold;
     }
 
     a:hover {
       text-decoration: underline;
     }
   </style>
-
 </head>
 
 <body>
@@ -46,51 +72,49 @@
   
   <h3>VIT Email ID:</h3>
   <p>mohitaggarwal2022@vitbhopal.ac.in</p>
-  <br>
+  
   <h2>All JS Tasks</h2>
   <table>
     <tr>
-      <th>Task NO. : </th>
-      <th>Link :</th>
+      <th>Task No.</th>
+      <th>Link</th>
     </tr>
     <tr>
-      <td>TASK - 1 :</td>
+      <td>TASK - 1</td>
       <td><a href="js-task1.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 2 :</td>
+      <td>TASK - 2</td>
       <td><a href="js-task2.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 3 :</td>
+      <td>TASK - 3</td>
       <td><a href="js-task3.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 4 :</td>
+      <td>TASK - 4</td>
       <td><a href="js-task4.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 5 :</td>
+      <td>TASK - 5</td>
       <td><a href="js-task5.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 6 :</td>
+      <td>TASK - 6</td>
       <td><a href="js-task6.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 7 :</td>
+      <td>TASK - 7</td>
       <td><a href="js-task7.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 8 :</td>
+      <td>TASK - 8</td>
       <td><a href="js-task8.html" target="_blank">Click Here</a></td>
     </tr>
     <tr>
-      <td>TASK - 9 :</td>
+      <td>TASK - 9</td>
       <td><a href="js-task9-index.html" target="_blank">Click Here</a></td>
     </tr>
   </table>
-
 </body>
-
 </html>
